--- a/xcx/xcx_controller/.settings/org.eclipse.wst.common.component
+++ b/xcx/xcx_controller/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="hrm">
+    <wb-module deploy-name="xcx">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
@@ -14,6 +14,6 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/xcx_controller/target/classes"/>
-        <property name="context-root" value="hrm"/>
+        <property name="context-root" value="xcx"/>
     </wb-module>
 </project-modules>
